# ARGoS-Foraging

./: .gitignore  CMakeLists.txt  experiments.lua  notes.text
cmake/: SimulationConfig.cmake
controllers/: CMakeLists.txt
controllers/footbot_foraging/: CMakeLists.txt  footbot_foraging.cpp  footbot_foraging.h  trace_message.cpp  trace_message.h
embedding/galib/: CMakeLists.txt
loop_functions/: CMakeLists.txt
loop_functions/foraging_loop_functions/: CMakeLists.txt  foraging_loop_functions.cpp  foraging_loop_functions.h  foraging_qt_user_functions.cpp  foraging_qt_user_functions.h
scripts/: debug-foraging-experiment.sh  generate-experiments.lua  lua-templates.lua  make-all.sh  make-makefiles.sh  make-tags.sh  run-all-experiments.sh  run-foraging-experiment.sh  xml-template.lua
xml/: 001-xp.xml  002-xp.xml  003-xp.xml  004-xp.xml  005-xp.xml  006-xp.xml  007-xp.xml  008-xp.xml  009-xp.xml  010-xp.xml  011-xp.xml  012-xp.xml  013-xp.xml  014-xp.xml  015-xp.xml  016-xp.xml  017-xp.xml  018-xp.xml  019-xp.xml  020-xp.xml  021-xp.xml  022-xp.xml  023-xp.xml  024-xp.xml  foraging-experiment-1.xml  foraging-experiment-2.xml  foraging-experiment-3.xml  foraging-headless.xml  foraging-nr.xml  foraging.xml
